--- a/Cuestionario_Modulo1/.gitignore
+++ b/Cuestionario_Modulo1/.gitignore
@@ -8,6 +8,8 @@ wheels/
 
 # Virtual environments
 .venv
-.env
-chroma_langchain_db/
+.env/
 uv.lock
+
+# Proyecto: base de datos local de LangChain
+chroma_langchain_db/
